5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1582_1332.log
== SUBMITION (2019-04-09 16:04:35) 
-- CODE:
aresta =5**6
area = 
 
print(round(area, 4))
-- EXECUTION TIME:
0.129188
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:04:36) 
-- CODE:
aresta =5**6
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:06:23) 
-- CODE:
aresta =5**6
area =3/2*(3**0.5)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.139746
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
634295950.0374
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:06:24) 
-- CODE:
aresta =5**6
area =3/2*(3**0.5)*(aresta**2)
 
print(round(area, 4))
-- OUTPUT:
634295950.0374
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:06:47) 
-- CODE:
aresta =5**6
area =3/2*(3**0.5)*(aresta**2)
 print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:07:00) 
-- CODE:
aresta =5**6
area =3/2*(3**0.5)*(aresta**2)
 print(round(area,4))
-- ERROR:
File "XXXX", line 3
    print(round(area,4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:07:08) 
-- CODE:
aresta =5**6
area =3/2*(3**0.5)*(aresta**2)
print(round(area,4))
-- OUTPUT:
634295950.0374
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:07:09) 
-- CODE:
aresta =5**6
area =3/2*(3**0.5)*(aresta**2)
print(round(area,4))
-- EXECUTION TIME:
0.246978
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
634295950.0374
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:08:15) 
-- CODE:
aresta =5**6
area =3/2*(3**0.5)*(aresta**2)
 print(round9area,4)
-- ERROR:
File "XXXX", line 3
    print(round9area,4)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:08:41) 
-- CODE:
aresta =5**6
area =3/2*(3**0.5)*(aresta**2)
 print(round(area,4)
-- ERROR:
File "XXXX", line 3
    print(round(area,4)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:08:43) 
-- CODE:
aresta =5**6
area =3/2*(3**0.5)*(aresta**2)
 print(round(area,4)
-- EXECUTION TIME:
0.129835
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 3
    print(round(area,4)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:08:53) 
-- CODE:
aresta =5**6
area =3/2*(3**0.5)*(aresta**2)
 print(round(area,4)
-- EXECUTION TIME:
0.181369
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 3
    print(round(area,4)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:08:53) 
-- CODE:
aresta =5**6
area =3/2*(3**0.5)*(aresta**2)
 print(round(area,4)
-- EXECUTION TIME:
0.178199
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 3
    print(round(area,4)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:47:23) 
-- CODE:
aresta =5**6
area =3/2*(3**0.5)*(aresta**2)
 print(round(area,4)
-- EXECUTION TIME:
0.130054
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 3
    print(round(area,4)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:47:24) 
-- CODE:
aresta =5**6
area =3/2*(3**0.5)*(aresta**2)
 print(round(area,4)
-- ERROR:
File "XXXX", line 3
    print(round(area,4)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 14:12:27) 
-- CODE:
aresta =5**6
area =3/2*(3**0.5)*(aresta**2)
 print(round("digite um valor")
-- ERROR:
File "XXXX", line 3
    print(round("digite um valor")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 14:12:50) 
-- CODE:
aresta =5**6
area =3/2*(3**0.5)*(aresta**2)
 print(round(" , 4")
-- ERROR:
File "XXXX", line 3
    print(round(" , 4")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 14:13:07) 
-- CODE:
aresta =5**6
area =3/2*(3**0.5)*(aresta**2)
 print(round( , 4)
-- ERROR:
File "XXXX", line 3
    print(round( , 4)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:37:42) 
-- CODE:
n = float(input('digite a aresta: '))
area = 3/2(3**0,5**2)
print(round(' qual e o valor'))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:38:25) 
-- CODE:
n = float(input('digite a aresta: '))
area = 3/2(3**0,5**2)
print(round(' qual e o valor', a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:38:47) 
-- CODE:
n = float(input('digite a aresta: '))
area = 3/2(3**0,5)
print(round(' qual e o valor', a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:39:34) 
-- CODE:
n = float(input('digite a aresta: '))
area = a=3/2**3**2
print(round(' qual e o valor', a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 22:39:45) 
-- CODE:
n = float(input('digite a aresta: '))
area = a=3/2**3**2
print(round(' qual e o valor', a))
-- EXECUTION TIME:
0.178684
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:39:48) 
-- CODE:
n = float(input('digite a aresta: '))
area = a=3/2**3**2
print(round(' qual e o valor', a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:57:48) 
-- CODE:
n = float(input('digite a aresta: '))
area = a=3/2**3**0,2
print(round(' qual e o valor', a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:58:17) 
-- CODE:
n = float(input('digite a aresta: '))
a = a=3/2**3**0,2
print(round(' qual e o valor', a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:00:52) 
-- CODE:
n = float(input('digite a aresta: '))
a = a=3/2**3**0,2
print(round(' qual e o valor'))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:01:08) 
-- CODE:
n = float(input('digite a aresta: '))
a = a=3/2**3**0,2
print(round(' qual e o valor' , a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:01:30) 
-- CODE:
n = float(input('digite a aresta: '))
A = a=3/2**3**0,2
print(round(' qual e o valor' , A))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:04:39) 
-- CODE:
n = float(input('digite a aresta: '))
b= a=3/2**3**0,2
print(round('qual o valor de', b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:05:37) 
-- CODE:
n = float(input('digite a aresta: '))
b= a=3/2**3**0,2
print(round('qual o valor de', 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:10:57) 
-- CODE:
n = float(input('digite a aresta: '))
b= (a=3/2)3**0,2
print(round('qual o valor de', b))
-- ERROR:
File "XXXX", line 2
    b= (a=3/2)3**0,2
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:14:02) 
-- CODE:
n = float(input('digite a aresta: '))
b = ((3/2) + 3**0,3)**0,2
print(round('qual o valor de', b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:14:20) 
-- CODE:
n = float(input('digite a aresta: '))
b = ((3/2) + 3**0,3)
print(round('qual o valor de', b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:15:05) 
-- CODE:
n = float(input('digite a aresta: '))
b = ((3/2) + 3**0,3)
print('qual e o valor', a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:15:32) 
-- CODE:
n = float(input('digite a aresta: '))
b = ((3/2) + 3**0,3)
print(round('qual e o valor', a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:16:10) 
-- CODE:
n = float(input('digite a aresta: '))
b = ((3/2) + 3**0,3)
print(round( ,4))
-- ERROR:
File "XXXX", line 3
    print(round( ,4))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:16:33) 
-- CODE:
n = float(input('digite a aresta: '))
b = ((3/2) + 3**0,3)
print(round( , 4))
-- ERROR:
File "XXXX", line 3
    print(round( , 4))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 16:02:55) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5)*(5**2)
print(round(area, 4))
-- EXECUTION TIME:
0.786803
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
